WebGL shader link error in iOS 15 beta: "Internal error compiling shader with Metal backend" https://bugs.webkit.org/show_bug.cgi?id=227723

The sequence operator can be used to combine statements. Our initial
logic did not account for this.
Source/ThirdParty/ANGLE:

Reviewed by Dean Jackson.

* src/compiler/translator/TranslatorMetalDirect/SeparateCompoundExpressions.cpp:
(sh::Separator::isStandaloneExpr):

LayoutTests:

Reviewed by Dean Jackson.

* fast/canvas/webgl/shader-with-comma-op-expected.txt: Added.
* fast/canvas/webgl/shader-with-comma-op.html: Added.


Canonical link: https://commits.webkit.org/239469@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279656 268f45cc-cd09-0410-ab3c-d52691b4dbfc